# reposage

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: deps.py  main.py
apps/api/app/routers/: chat.py  files.py  jobs.py  projects.py
apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/components/: project-workspace.tsx  projects-screen.tsx  providers.tsx  status-badge.tsx
apps/web/src/components/ui/: button.tsx  input.tsx  panel.tsx  textarea.tsx
apps/web/src/lib/: api.ts  types.ts  utils.ts
tests/: conftest.py  test_api.py  test_indexing_pipeline.py  test_repository_utils.py  test_retrieval.py
workers/indexer/: Dockerfile  worker.py
