[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "reposage"
version = "0.1.0"
description = "RepoSage backend services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.58.0",
  "orjson>=3.10.7",
  "pgvector>=0.3.5",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "sqlalchemy>=2.0.35",
  "tenacity>=8.5.0",
  "tree-sitter>=0.21.3",
  "tree-sitter-languages>=1.10.2",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4"
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

